--- a/.github/workflows/deploy-static-site.yml
+++ b/.github/workflows/deploy-static-site.yml
@@ -44,16 +44,13 @@ jobs:
 
       # Step 4: Log in to Azure using a Service Principal
       # The credentials are stored as GitHub Secrets for security.
-      # AZURE_CLIENT_ID, AZURE_CLIENT_SECRET, AZURE_TENANT_ID, and AZURE_SUBSCRIPTION_ID must be configured in your GitHub repository secrets.
-      - name: Azure Login
-        uses: azure/login@v1
+      # clientId, clientSecret, tenantId, and subscriptionId must be configured in your GitHub repository secrets.
+      - name: Azure Login action
+        uses: azure/login@v2
         with:
-          # Use individual parameters for client ID, tenant ID, subscription ID, and client secret
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
-          creds: ${{ secrets.AZURE_CLIENT_SECRET }} 
-
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          enable-AzPSSession: true
+        
       # Step 5: Upload static website files to Azure Blob Storage
       # This uses the Azure CLI to upload the contents of your static site directory
       # to the '$web' container of your storage account.
