--- a/.github/workflows/update-player-data.yml
+++ b/.github/workflows/update-player-data.yml
@@ -33,8 +33,6 @@ jobs:
         run: |
           # Use curl to fetch the JSON data from the specified URL
           # -s: Silent mode (don't show progress or error messages)
-          # -o: Write output to a file (we'll capture it in a variable for processing)
-          # The output is stored in the 'data' output of this step
           PLAYER_JSON=$(curl -s http://ratings.katouche.fr/extract.php)
           echo "Fetched JSON data:"
           echo "$PLAYER_JSON" | head -n 5 # Print first 5 lines for brevity in logs
@@ -46,41 +44,26 @@ jobs:
           fi
 
           # Pass the JSON data as an output of this step
-          echo "data=$PLAYER_JSON" >> $GITHUB_OUTPUT
+          echo "data=$PLAYER_JSON" >> "$GITHUB_OUTPUT"
 
-      # Step 3: Create the players.js file
-      - name: Create players.js file
-        run: |
-          # Retrieve the JSON data from the previous step's output
-          JSON_CONTENT="${{ steps.fetch_data.outputs.data }}"
-
-          # Construct the content for players.js
-          # The 'EOF' marker is used for a multi-line string (heredoc)
-          cat <<EOF > players.js
-const players = ${JSON_CONTENT};
-EOF
-          echo "players.js created successfully."
-          cat players.js | head -n 5 # Print first 5 lines of the created file for verification
-
-      # Step 4: Configure Git user for committing
-      - name: Configure Git
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-      # Step 5: Commit and push the players.js file
-      - name: Commit and Push changes
-        run: |
-          # Add players.js to the staging area
-          git add players.js
-
-          # Check if there are any changes to commit
-          if ! git diff --cached --exit-code; then
-            echo "No changes to commit. Skipping commit and push."
-          else
-            # Commit the changes
-            git commit -m "Update players.js with latest data from API"
-            # Push the changes to the 'main' branch
-            git push origin main
-            echo "players.js committed and pushed successfully."
-          fi
+      # Step 3: Create and Commit players.js using 1arp/create-a-file-action
+      - name: Create and Commit players.js
+        uses: 1arp/create-a-file-action@0.4.5
+        with:
+          # The path where the file will be created relative to the repository root
+          path: ./webfiles/players.js
+          # The content of the file, using the JSON data fetched in the previous step
+          content: |
+            const players = ${{ steps.fetch_data.outputs.data }};
+          # The commit message for the new or updated file
+          commit-message: "Update players.js with latest data from API"
+          # The name of the committer
+          committer: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
+          # The name of the author (can be the same as committer)
+          author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
+          # The branch to commit to
+          branch: main
+          # The GitHub token for authentication
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # Set to true to only commit if there are changes
+          update-only: true
