--- a/.github/workflows/update-player-data.yml
+++ b/.github/workflows/update-player-data.yml
@@ -15,6 +15,9 @@ on:
 # Defines a single job named 'fetch-and-commit'
 jobs:
   fetch-and-commit:
+    # Grant write permissions to the GITHUB_TOKEN for this job
+    permissions:
+      contents: write
     # Specifies the runner environment for this job
     runs-on: ubuntu-latest
 
@@ -29,7 +32,6 @@ jobs:
 
       # Step 2: Fetch JSON data from the API and create players.js locally in webfiles/
       - name: Fetch Player Data and Create File
-        shell: bash
         run: |
           # Create the webfiles directory if it doesn't exist
           mkdir -p webfiles
@@ -67,3 +69,6 @@ jobs:
           # The branch to commit to (defaults to the current branch, which is 'main' here)
           branch: main
           # The default committer and author are usually 'github-actions[bot]', which is appropriate.
+          # You can explicitly set them if needed:
+          # commit_user_name: "github-actions[bot]"
+          # commit_user_email: "github-actions[bot]@users.noreply.github.com"
